# agent-config

./: .gitignore  AGENT-CONFIG-DEEPLINK.md  AGENT-RULES-DEEPLINK.md  AGENTS.md  Cargo.toml  README.md  build-rust.sh  build.sh  handle-deeplink-rust.sh  handle-deeplink.sh  install-rust.sh  install.sh  redirect.html  rulesync.jsonc  sync-skills-rust.sh  sync-skills.sh
.agent-config/: AGENTS.md
.agent-config/rules/: 00-workflow.md  05-telegraphic-brevity.md  10-stack.md  15-plan-clipboard.md  16-implement-last-plan.md  20-tooling.md  22-parallel-subagents-devin.md  25-cmux-agent-bridge.md  30-infra.md  40-platform.md  acp-acpx-auto-update.md  editing-agents-claude-global.md  global-content-workflow.md  skill-sync-pattern.md  skills-centralization.md  task-interruption-handling.md
.rulesync/: mcp.json
AgentConfigHandler/: AgentConfigHandler.icns  Info.plist  build.sh  handle-deeplink.ps1  install-linux.sh  install-windows.ps1  main.swift
AgentRulesHandler/: Info.plist  build.sh  handle-deeplink.ps1  install-linux.sh  install-windows.ps1  main.swift
agent-config/: Cargo.toml
agent-config-build/: Cargo.toml
agent-config-build/src/: main.rs
agent-config-core/: Cargo.toml
agent-config-core/src/: config.rs  error.rs  lib.rs  rules.rs  skills.rs
agent-config-deeplink/: Cargo.toml
agent-config-deeplink/src/: main.rs
agent-config-install/: Cargo.toml
agent-config-install/src/: main.rs
agent-config-sync/: Cargo.toml
agent-config-sync/src/: main.rs
agent-config/src/: main.rs
docs/: deeplink-badges.md  deeplink.md  design-philosophy.md  platform-support.md  safety.md  usage.md
rules/: global-content-workflow.md  no-personal-config-in-repo.md
