[workspace]
members = [
    "agent-config-core",
    "agent-config-build",
    "agent-config-sync",
    "agent-config-deeplink",
    "agent-config-install",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LivioGama"]
license = "MIT"
repository = "https://github.com/LivioGama/agent-config"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# File system
walkdir = "2.4"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"