[package]
name = "agent-config-install"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-config-install"
path = "src/main.rs"

[dependencies]
agent-config-core = { path = "../agent-config-core" }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"