[package]
name = "agent-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-config"
path = "src/main.rs"

[dependencies]
agent-config-core = { path = "../agent-config-core" }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dirs = "5.0"
which = "6.0"
percent-encoding = "2.3"
